[package]
name = "easy_password"
version = "0.1.1"
authors = ["Chris Williams <chrispwill@gmail.com>"]
description = "Easy password hashing (includes bcrypt)"
license = "MIT"
readme = "README.md"
keywords = ["bcrypt", "password", "hash"]
repository = "https://github.com/ChrisPWill/easy_password"
homepage = "https://github.com/ChrisPWill/easy_password"

[dependencies]
hmac = "0.5"
sha2 = "0.7"
bcrypt = "0.2"
