[package]
name = "easy_password"
version = "0.1.2"
authors = ["Chris Williams <chrispwill@gmail.com>"]
description = "Easy password hashing (includes bcrypt)"
license = "MIT"
readme = "README.md"
keywords = ["bcrypt", "password", "hash"]
repository = "https://github.com/ChrisPWill/easy_password"
homepage = "https://github.com/ChrisPWill/easy_password"

[dependencies]
hmac = "0.7.1"
sha2 = "0.8.0"
bcrypt = "0.5.0"
