[package]
name = "rusty_password"
version = "0.1.2"
authors = ["Erkin Tek <erkintek@gmail.com>", "Chris Williams <chrispwill@gmail.com>"]
description = "Rusting passwords that cant be recognized, (aka hashes using bcrypt)"
license = "MIT"
readme = "README.md"
keywords = ["bcrypt", "password", "hash"]
repository = "https://github.com/nerkn/easy_password"
homepage = "https://github.com/nerkn/easy_password"

[dependencies]
hmac = "0.7.1"
sha2 = "0.8.0"
bcrypt = "0.12.0"
